# sdrf-pipelines

pydantic_based/: README.md  environment.yml  pyproject.toml
pydantic_based/src/sdrf_pipelines_pydantic/cells/characteristics/: __init__.py  biologic_replicate.py  organism.py  organism_disease.py  organism_part.py  undefined.py
pydantic_based/src/sdrf_pipelines_pydantic/cells/comments/: __init__.py  base_comment.py  modification_parameter_comment.py  undefined_comment.py
pydantic_based/src/sdrf_pipelines_pydantic/records/: __init__.py  default.py
pydantic_based/tests/: __init__.py
pydantic_based/tests/cells/: __init__.py
pydantic_based/tests/cells/comments/: __init__.py  test_modification_parameter_comment.py
