[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "sdrf_pipelines_pydantic"
authors = [
    { name = "BigBio Team", email = "ypriverol@gmail.com" }
]
version = "0.0.1"
requires-python = ">=3.10"
description = "Translate, convert SDRF to configuration pipelines"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "pydantic ~= 2.6",
    "pyteomics ~= 4.7"
]


[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
    "black"
]